# strategy

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: xyts-strategy-sdk.cmake
conf/backtest_example/: backtest.yaml
conf/base/: strategy_example.json
conf/real_example/: data_center.yaml  data_collector.yaml  global.yaml  market_center.yaml  strategy_example_SFSM.json
conf/real_example/account/: ctp.yaml
conf/real_example/data_feed/: ctp.yaml
data/contract/: contracts_2024-09-05.csv
data/holiday/: 2024.csv
extension/: CMakeLists.txt  my_collected_data_handler.cpp  my_data_filter.cpp  my_data_replayer.cpp  my_matching_engine.cpp  my_wechat_sender.cpp
scripts/: run_backtest.sh
src/: CMakeLists.txt  strategy_example.cpp
